# quat

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  quat.iss
Makefiles/: Makefile.mingw32  Makeinclude.mingw32
Makefiles/gui/: Makefile.mingw32
Makefiles/kernel/: Makefile.mingw32
doc/: Makefile.am  quat-de-1.html  quat-de-5.html  quat-us-1.html  quat-us-2.html  quat-us-3.html  quat-us-4.html  quat-us-5.html  quat-us.html
docs/: Doxyfile
docs/examples/dendr_aa/: dendr_aa.col  dendr_aa.ini
docs/examples/dendrit1/: dendrit1.ini
docs/examples/drache/: drache.ini
docs/examples/fetzen/: fetzen.ini
docs/examples/filigran/: filigran.col
docs/examples/nice/: nice.ini
docs/examples/nocut/: nocut.ini
docs/examples/sleipnir/: sleipnir.ini
docs/manual/: Makefile.in  gpl.html  quat-de-2.html  quat-de-3.html  quat-de-4.html  quat-de.html
examples/cut/: complex.cut  cut.ini
examples/dendrit1/: dendr_st.ini  dendrit1.col
examples/dezent/: dezent.ini
examples/drache/: reds.col
examples/fetz_aa/: fetz_aa.col  fetz_aa.ini
examples/filigran/: filigran.ini
examples/icon/: icon.ini
examples/nice/: nice.col
examples/nocut/: nocut.col
examples/title1/: title1.ini
gui/: CReplacements.cxx  CReplacements.h  ChildWindow.h  ColorClipboard.h  ColorEditor.cxx  ColorEditor.fl  ColorEditor.h  ColorPreview.cxx  ColorPreview.h  ImageWid.cxx  ImageWid.h  IntersecEditor.cxx  IntersecEditor.fl  JuliaPreview.cxx  JuliaPreview.h  MainWindow.cxx  Makefile.am  Makefile.in  MandelPreview.cxx  ObjectEditor.cxx  ObjectEditor.fl  ObjectEditor.h  OtherEditor.fl  OtherEditor.h  ParameterEditor.fl  PixWid.cxx  PixWid.h  ScrollWid.cxx  ViewEditor.fl  WriteIni.fl  about.cxx  about.h  icon.xpm  main.cxx  resources.h  structs.h
kernel/: Makefile.am  Makefile.in  calculat.c  calculat.h  colors.h  common.h  files.c  iter.c  quat.c  textver.h
resources/mac/: logo.icns
scripts/: build_fltk_linux.sh  build_fltk_mac.sh  build_fltk_win.sh  build_zlib_linux.sh  build_zlib_mac.sh  build_zlib_win.sh  format.sh
scripts/fltk_win/ide/VisualC2010/: fltk.lib.vcxproj  fltk.sln  fltkforms.vcxproj  fltkgl.vcxproj  fltkimages.vcxproj  fluid.vcxproj  jpeg.vcxproj  libpng.vcxproj  zlib.vcxproj
setup-win/: quat.iss
src/gui/: CReplacements.cxx  CReplacements.h  ChildWindow.h  ColorClipboard.cxx  ColorClipboard.h  ColorEditor.cxx  ColorEditor.h  ColorPreview.cxx  ColorPreview.h  ImageWid.cxx  ImageWid.h  IntersecEditor.cxx  IntersecEditor.h  JuliaPreview.cxx  JuliaPreview.h  MainWindow.cxx  MainWindow.h  MandelPreview.cxx  MandelPreview.h  ObjectEditor.cxx  ObjectEditor.h  OtherEditor.cxx  OtherEditor.h  ParameterEditor.cxx  ParameterEditor.h  PixWid.cxx  PixWid.h  ScrollWid.cxx  ScrollWid.h  ViewEditor.cxx  ViewEditor.h  ViewSelector.cxx  ViewSelector.h  WriteIni.cxx  WriteIni.h  about.cxx  about.fl  about.h  dragWindow.h  icon.xbm  (+7 more)
src/gui/fl/: ColorEditor.fl  IntersecEditor.fl  ObjectEditor.fl  OtherEditor.fl  ParameterEditor.fl  ViewEditor.fl  WriteIni.fl  about.fl
src/kernel/: calculat.c  calculat.h  colors.c  colors.h  common.h  files.c  files.h  iter.c  iter.h  png.c  png.h  qmath.c  qmath.h  quat.c  quat.h  textver.c  textver.h  vector.h
