QDOCFILES=quat-de.html quat-de-1.html quat-de-2.html \
	quat-de-3.html quat-de-4.html quat-de-5.html \
	quat-us.html quat-us-1.html quat-us-2.html \
	quat-us-3.html quat-us-4.html quat-us-5.html \
	gpl.html quat.png chart_de.png chart_us.png \
	oe.png ve.png ce.png ie.png ote.png \
	ex_1.jpg ex_2.jpg ex_3.jpg Dendr_st.jpg 
pkgdata_DATA=$(QDOCFILES)
EXTRA_DIST=$(QDOCFILES)
	
